# dragonbox

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  dragonbox.h  dragonbox_to_chars.h  fp_to_chars.h  to_chars.h
.github/workflows/: ci.yml  cross.yml  os.yml
benchmark/: benchmark.cpp  benchmark.h  dragonbox.cpp  grisu_exact.cpp  ryu.cpp  schubfach.cpp
benchmark/grisu_exact/: fp_to_chars.h  fp_to_chars2.cpp  grisu_exact.h
benchmark/ryu/: d2s.h
benchmark/schubfach/: schubfach_64.cc
benchmark_results/: plot_benchmarks.m  plot_uniform_benchmark.m
benchmark_results/shaded_plots/: plot_distribution_prctile.m
cmake/: dragonboxConfig.cmake.in
dragonbox_to_chars/: dragonbox_to_chars.cpp
fp_to_chars/: fp_to_chars.cpp
include/dragonbox/: dragonbox.h  dragonbox_to_chars.h
other_files/: unknown_win64_vc2019.html
source/: dragonbox_to_chars.cpp
subproject/benchmark/: CMakeLists.txt  benchmark.h  dragonbox.cpp  main.cpp  schubfach.cpp
subproject/benchmark/include/: benchmark.h
subproject/benchmark/matlab/: plot_benchmarks.m  plot_digit_benchmark.m  plot_uniform_benchmark.m
subproject/benchmark/source/: benchmark.cpp  dragonbox.cpp  grisu_exact.cpp  main.cpp  ryu.cpp  schubfach.cpp
subproject/common/: CMakeLists.txt
subproject/common/include/: big_uint.h  bigint.h  continued_fractions.h  good_rational_approx.h  random_float.h
subproject/common/source/: big_uint.cpp
subproject/meta/: CMakeLists.txt
subproject/meta/live_test/: main.cpp
subproject/meta/perf_test/: main.cpp
subproject/meta/results/: binary32_generated_cache.txt  binary64_compressed_cache_error_table.txt  binary64_generated_cache.txt
subproject/meta/source/: generate_cache.cpp  generate_compressed_cache_error_table.cpp  live_test.cpp  perf_test.cpp  sandbox.cpp
subproject/results/: binary32_positive_k.csv  binary64_generated_cache.txt  binary64_negative_k.csv  binary64_negative_k_right_closed_directed_shorter_interval.csv  binary64_positive_k.csv
subproject/simple/: CMakeLists.txt  README.md  simple_dragonbox.h  simple_dragonbox_test.cpp
subproject/simple/include/: simple_dragonbox.h
subproject/test/: CMakeLists.txt
subproject/test/results/: binary32_negative_k.csv  binary32_negative_k_nearest_shorter_interval.csv  binary32_negative_k_right_closed_directed_shorter_interval.csv  binary32_positive_k.csv  binary32_positive_k_nearest_shorter_interval.csv  binary32_positive_k_right_closed_directed_shorter_interval.csv  binary64_negative_k.csv  binary64_negative_k_nearest_shorter_interval.csv  binary64_negative_k_right_closed_directed_shorter_interval.csv  binary64_positive_k.csv  binary64_positive_k_nearest_shorter_interval.csv  binary64_positive_k_right_closed_directed_shorter_interval.csv
subproject/test/source/: compute_required_cache_length.cpp  test_all_shorter_interval_cases.cpp  uniform_random_test.cpp  verify_cache_precision.cpp  verify_compressed_cache.cpp  verify_fast_multiplication.cpp  verify_log_computation.cpp  verify_magic_division.cpp
subproject/test/uniform_random_test/: main.cpp
subproject/test/verify_fast_multiplication/: main.cpp
subproject/test/verify_log_computation/: main.cpp
subprojects/benchmark/: grisu_exact.cpp  main.cpp
subprojects/benchmark/matlab/: plot_benchmarks.m  plot_digit_benchmark.m
subprojects/generate_cache/: main.cpp
subprojects/live_test/: main.cpp
subprojects/perf_test/: main.cpp
subprojects/results/: binary64_negative_k_nearest_shorter_interval.csv
subprojects/sandbox/: main.cpp
subprojects/uniform_random_test/: main.cpp
subprojects/verify_compressed_cache/: main.cpp
subprojects/verify_log_computation/: main.cpp
subprojects/verify_magic_division/: main.cpp
test/: CMakeLists.txt
test/include/: bigint.h  random_float.h
test/source/: generate_cache.cpp  generate_compressed_cache_error_table.cpp  live_test.cpp  main.cpp  misc_test.cpp  perf_test.cpp  test_all_shorter_interval_cases.cpp  uniform_random_test.cpp  verify_cache_length.cpp  verify_compressed_cache.cpp  verify_fast_multiplication.cpp  verify_magic_division.cpp
test_results/: binary32_generated_cache.txt  binary32_negative_k.csv  binary32_negative_k_nearest_shorter_interval.csv  binary32_negative_k_right_closed_directed_shorter_interval.csv  binary32_positive_k.csv  binary32_positive_k_nearest_shorter_interval.csv  binary32_positive_k_right_closed_directed_shorter_interval.csv  binary64_compressed_cache_error_table.txt  binary64_generated_cache.txt  binary64_negative_k.csv  binary64_negative_k_nearest_shorter_interval.csv  binary64_negative_k_right_closed_directed_shorter_interval.csv  binary64_positive_k.csv  binary64_positive_k_nearest_shorter_interval.csv  binary64_positive_k_right_closed_directed_shorter_interval.csv
tests/: bigint.h  generate_cache.cpp  generate_compressed_cache_error_table.cpp  live_test.cpp  main.cpp  misc_test.cpp  perf_test.cpp  random_float.h  test_all_shorter_interval_cases.cpp  uniform_random_perf_test.cpp  uniform_random_test.cpp  verify_cache_length.cpp  verify_compressed_cache.cpp  verify_fast_multiplication.cpp  verify_incorrect_rounding_removal.cpp  verify_log_computation.cpp  verify_magic_division.cpp
to_chars/: to_chars.cpp
vc2019/: dragonbox.sln  dragonbox.vcxproj  dragonbox.vcxproj.filters
vc2019/subproject/benchmark/: benchmark.vcxproj  benchmark.vcxproj.filters
vc2019/subproject/meta/live_test/: live_test.vcxproj  live_test.vcxproj.filters
vc2019/subproject/test/verify_log_computation/: verify_log_computation.vcxproj  verify_log_computation.vcxproj.filters
vc2019/subprojects/benchmark/: benchmark.vcxproj  benchmark.vcxproj.filters
